--- a/frontend/src/style-sheets/componentes.css
+++ b/frontend/src/style-sheets/componentes.css
@@ -11,7 +11,7 @@ h1 {
   animation-duration: 2s;
 }
 
-.boton {
+.button {
   font-size: 1rem;
 
   background-color: rgba(0, 0, 0, 0);
@@ -26,7 +26,7 @@ h1 {
   animation-duration: 1s;
 }
 
-.boton:hover {
+.button:hover {
   transition: 0.5s;
   background-color: rgba(0, 163, 255, 0.5);
 }
