Fixing backend stuff

--- a/frontend/src/style-sheets/app.css
+++ b/frontend/src/style-sheets/app.css
@@ -28,6 +28,7 @@ nav {
   right: 0.1%;
   background-color: var(--main-color);
 }
+
 .cajas {
   animation-name: "appear";
   animation-duration: 3s;
@@ -36,7 +37,7 @@ nav {
 @keyframes appear {
   from {
     opacity: 0;
-    width: 0%;
+    width: 0;
   }
   to {
     opacity: 1;
