Modifying the backend router and generating first interactivity from frontend to backend with MongoDB

--- a/frontend/src/stylesheets/root/global.css
+++ b/frontend/src/stylesheets/root/global.css
@@ -22,7 +22,7 @@
 }
 
 html {
-  font-size: 62.5%; /* 1px = 0.1rem, 1rem = 10px */
+  font-size: 62.5%; /* 1px = 0.1rem, 10px = 1rem */
 }
 
 body {
