--- a/frontend/src/stylesheets/app.css
+++ b/frontend/src/stylesheets/app.css
@@ -30,16 +30,14 @@ nav {
 
 .Inicio-arriba {
   display: flex;
-  margin: auto;
-  margin-top: 2rem;
+  margin: 2rem auto auto auto;
   flex-direction: column;
   align-items: right;
   justify-content: center;
 }
 
 .Inicio-medio {
-  margin: auto;
-  margin-top: 10rem;
+  margin: 10rem auto auto auto;
 
   display: flex;
   align-items: center;
@@ -47,8 +45,7 @@ nav {
 }
 
 .Inicio-abajo {
-  margin: auto;
-  margin-top: 4rem;
+  margin: 4rem auto auto auto;
 
   display: flex;
   align-items: center;
@@ -82,7 +79,6 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
 }
 
 .Login-usuario {
@@ -121,4 +117,8 @@ nav {
   100% {
     opacity: 1;
   }
+}
+
+p {
+  margin: 1rem 0;
 }
