--- a/frontend/src/stylesheets/app.css
+++ b/frontend/src/stylesheets/app.css
@@ -233,6 +233,26 @@ nav {
   font-size: 2rem;
 }
 
+.Publicar-publicacion-parrafo {
+  width: 68rem;
+  padding: 1rem;
+  height: 10rem;
+  color: black;
+  margin-bottom: 1rem;
+}
+
+.Publicar-comentario-apartado {
+  width: 70rem;
+}
+.Publicar-comentario-parrafo {
+  width: 60rem;
+  margin-left: 3rem;
+  padding: 1rem;
+  height: 5rem;
+  color: black;
+  margin-bottom: 1rem;
+}
+
 .parrafo::first-letter {
   color: red;
   font-size: 2rem;
