code cleanup repairing mergin rodrigo's issue

--- a/frontend/src/stylesheets/app.css
+++ b/frontend/src/stylesheets/app.css
@@ -162,6 +162,10 @@ nav {
   background-color: var(--main-color);
 }
 
+.Publicar-comentario-parrafo > p {
+  max-width: 60rem;
+}
+
 .Perfil {
   background-color: gray;
   border-radius: 3rem;
